--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -13,6 +13,9 @@
     background-color: $color-light;
     padding: 10rem 0 30rem;
     margin-top: -30vh;
+    @include respond(tab-port) {
+        text-align: center;
+    }
     @include respond(phone) {
         padding-bottom: 0 0 20rem;
     }
